kubernetes/apps/external-secrets/external-secrets/manifests/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
{
  apiVersion: "cilium.io/v2",
  kind: "CiliumNetworkPolicy",
  metadata: {
    name: "external-secrets",
  },
  spec: {
    endpointSelector: {
      matchLabels: {
        app.kubernetes.io/name: "external-secrets",
      },
    },
    ingress: [{
      fromEndpoints: [{
        matchLabels: {
          app.kubernetes.io/name: "prometheus",
          io.kubernetes.pod.namespace: "observability",
        },
      }],
      toPorts: [{
        ports: [{
          port: "8080",
        }],
      }],
    }],
    egress: [{
      toEndpoints: [{
        matchLabels: {
          io.kubernetes.pod.namespace: "kube-system",
          k8s-app: "kube-dns",
        },
      }],
      toPorts: [{
        ports: [{
          port: "53",
          protocol: "UDP",
        }, {
          port: "53",
          protocol: "TCP",
        }],
        rules: {
          dns: [{
            matchPattern: "*",
          }],
        },
      }],
    }, {
      toEntities: [
        "kube-apiserver",
      ],
      toPorts: [{
        ports: [{
          port: "6443",
          protocol: "TCP",
        }],
      }],
    }, {
      toEndpoints: [{
        matchLabels: {
          app.kubernetes.io/name: "openbao",
          app.kubernetes.io/instance: "openbao",
          io.kubernetes.pod.namespace: "openbao",
        },
      }],
      toPorts: [{
        ports: [{
          port: "8200",
          protocol: "TCP",
        }],
      }],
    }],
  },
}
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
{
  apiVersion: "cilium.io/v2",
  kind: "CiliumNetworkPolicy",
  metadata: {
    name: "external-secrets-webhook",
  },
  spec: {
    endpointSelector: {
      matchLabels: {
        app.kubernetes.io/name: "external-secrets-webhook",
      },
    },
    ingress: [{
      fromEndpoints: [{
        matchLabels: {
          app.kubernetes.io/name: "prometheus",
          io.kubernetes.pod.namespace: "observability",
        },
      }],
      toPorts: [{
        ports: [{
          port: "8080",
        }],
      }],
    }],
    egress: [{
      toEntities: [
        "kube-apiserver",
      ],
      toPorts: [{
        ports: [{
          port: "6443",
          protocol: "TCP",
        }],
      }],
    }],
  },
}
